@@ -2,6 +2,8 @@ Revision history for Perl module CPAN::Reporter::Smoker
 
 {{$NEXT}}
 
+    - New option 'skip_dev_versions' to work on minicpans (CHORNY)
+
 0.25      2013-11-06 10:06:15 America/New_York
 
     - Add reloading history of modules smoked (CHORNY)
